He creado unas carpetas: css, html, img y javascript. Añadi un ficheri css para los estilos de la páginas y un fichero html para guardar lo aprendido en el lenguaje html.

--- a/WebJero.html
+++ b/WebJero.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Jerónimo Cortés Velásquez</title>
+<link rel="stylesheet" type="text/css" href="css/cssjero.css">
 <style>
 body {
 	background-color:rgb(210, 210, 210);
@@ -10,29 +11,16 @@ body {
 /* Así se usa una etiqueta con css
 ul {
 	color:rgba(255,0,51,1)
-	}*/
-.verde {
-	color:rgba(51,204,0,1);
-	}
-#titulo{
-	border:2px solid rgba(255,255,0,1);
-	text-align:center;
-	padding:5px;
-	padding-top:10px;
-}
-.tituloLi {
-	color: rgba(255,0,0,1);
-	font-size: 24px;
-	}
+	}*/	
 </style>
 </head>
  
 <body ="Red">
 
-<h1 id="titulo">Jerónimo Cortés Velásquez</h1>
+<h1 class="titulo">Jerónimo Cortés Velásquez</h1>
 <h2>Hobbies</h2>
 <ul>
-	<li class="tituloLi">Jugar futbol</li>
+  <li class="tituloLi">Jugar futbol</li>
     	<dl>
             <dt>Porteros</dt>
             <dd>Ter Stegen</dd>
@@ -49,39 +37,14 @@ ul {
             <dd>Hazard</dd>
        </dl>
     <li class="tituloLi">Jugar videojuegos</li>
-    		<dd>FIfa</dd>
-            <dd>Gta</dd>
-            <dd>Call of duty</dd>
+    		<dd>FIFA</dd>
+  <dd>Gta</dd>
+            <dd>CALL OF DUTY</dd>
     	
     <li class="tituloLi">Ver series y peliculas</li>
     	<dd>Nation Z</dd>
         <dd>stranger things</dd>
         <dd>Los 100</dd>
 </ul>
-    <!--<h2 class="verde"> Hobbies</h2>
-    
-    <ol start="100">
-    <li>Futbol</li>
-    	<dl>
-            <dt>Porteros</dt>
-            <dd>cortouis</dd>
-            <dd>Navas</dd>
-            <dt>Defensas</dt>
-            <dd>Yerri Mina</dd>
-        </dl>
-    <li>videojuegos</li>
-        <ul>
-        <li>Gta</li>
-        <li>Fifa</li>
-        </ul>
-    <li>salir con mis amigos</li>
-    <li>ver peliculas y series</li>
-    </ol>
-    <ul class="verde">
-    <li>Futbol</li>
-    <li>videojuegos</li>
-    <li>salir con mis amigos</li>
-    <li>ver peliculas y series</li>
-    </ul>-->
 </body>
 </html>
