he agregado un fichero llamado css.html he agregado nuevas etiquetas en html

--- a/WebJero.html
+++ b/WebJero.html
@@ -46,5 +46,10 @@ ul {
         <dd>stranger things</dd>
         <dd>Los 100</dd>
 </ul>
+
+<h3 class="tituloLi">descripción</h3>
+<p>Soy un chico de 13 años y me gusta jugar al futbol</p>
+
+<img src="img/jero.jpg" width="100" height="100" alt="foto de jero"/>
 </body>
 </html>
