--- a/html/htmljero.html
+++ b/html/htmljero.html
@@ -1,34 +1,51 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" class="borderojo">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Html Jero</title>
 <link rel="stylesheet" type="text/css" href="../css/cssjero.css">
 </head>
-<body>
+<body class="bordeazul margeninterior10px" >
+<div class="borderojo margeninterior10px">
 <h1 class="titulo">HTML</h1>
 <h2 class="subtitulos">Etiquetas</h2>
-
-<ol>
+</div>
+<ul>
 <h3 class="letracapital">titulos</h3>
-<li>h1</li>
-<li>h2</li>
-<li>h3</li>
-<li>h4</li>
-<li>h5</li>
-<li>h6</li>
-</ol>
+<li>&lt;h1&gt;</li>
+<li>&lt;h2&gt;</li>
+<li>&lt;h3&gt;</li>
+<li>&lt;h4&gt;</li>
+<li>&lt;h5&gt;</li>
+<li>&lt;h6&gt;</li>
+</ul>
 
-<ol>
+<ul>
 <h3 class="letracapital">listas</h3>
-<li>ul li</li>
-<li>ol li</li>
-<li>dl dt dd</li>
-</ol>
+<li>&lt;ul&gt; &lt;li&gt;</li>
+<li>&lt;ol&gt; &lt;li&gt;</li>
+<li>&lt;dl&gt; &lt;dt&gt; &lt;dd&gt;</li>
+</ul>
 
-<ol>
+<ul>
 <h3 class="letracapital">estilos css</h3>
-<li>style</li>
-</ol>
+<li>&lt;style&gt;</li>
+</ul>
+
+<ul>
+<h3 class="letracapital">secciones</h3>
+<li>&lt;div&gt;</li>
+<li>&lt;p&gt; parrafo</li> 
+</ul>
+
+<ul>
+<h3 class="letracapital">fotos</h3>
+<li>&lt;img /&gt;</li>
+<li>src</li> 
+<li>width</li>
+<li>height</li>
+<li>alt</li>
+</ul>
+
 </body>
 </html>
